# myapi

./: README.md  alembic.ini  pyproject.toml  requirements.txt
app/: __init__.py  logger.py  main.py
app/crud/: board_dao.py
app/database/: datasource.py
app/models/: board.py  common.py
app/routers/: __init__.py  board_controller.py
app/schemas/: board_schema.py
migration/: env.py
migration/versions/: 148d597f69dd_alter_board_name_length.py  787e2e15777a_alter_board.py  c9fd0d4387f1_init_alembic.py
